# roma-small-rover

./: .gitignore  README.md
devel/: .catkin  setup.sh
devel/lib/cvtest/: demo1
devel/lib/dynamixel/: demo0  reset
devel/lib/dynamixel_sdk/: group_bulk_write.py  group_sync_read.py  port_handler.py  protocol2_packet_handler.py
devel/lib/loadcell/: read
devel/lib/pkgconfig/: cvtest.pc  dynamixel.pc  dynamixel_sdk.pc  loadcell.pc
devel/lib/python3/dist-packages/dynamixel_sdk/: __init__.py
devel/share/cvtest/cmake/: cvtestConfig.cmake
devel/share/dynamixel/cmake/: dynamixelConfig.cmake
devel/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig.cmake
devel/share/loadcell/cmake/: loadcellConfig.cmake
docs/rover/cvtest/src/: demo1.cpp
docs/rover/dynamixel/: CMakeLists.txt  package.xml  readme.md
docs/rover/loadcell/: CMakeLists.txt
docs/rover/loadcell/launch/: rover2.launch
docs/rover/loadcell/outline/: low-cost-rover-outline.docx
docs/rover/loadcell/ref/: link.txt
docs/rover/loadcell/ref/loadcell本科生第一次标定/: load cell calibarting.7z  新建 Microsoft Excel 工作表.xlsx
docs/rover/loadcell/ref/loadcell第三次标定/: 对应关系.docx  新的校准数据.xlsx  校准数据.xlsx  转换成代码数据.docx
docs/rover/loadcell/ref/loadcell第二次校准/: 数据处理.xlsx
docs/rover/loadcell/ref/新的三轴力传感器硬件/: 校准数据.xlsx
docs/rover/loadcell/ref/新的三轴力传感器硬件/测试件打印/: 三轴力传感器简易模型.SLDPRT  (+9 more)
docs/rover/loadcell/solid/cnc件/: 1(2).SLDPRT  2(2).SLDPRT  力传感器组装件.SLDASM  力传感器组装件.SLDPRT  力传感器组装件.STEP  单轴力传感器.SLDPRT  单轴力传感器SLDPRT - 副本 (2).SLDPRT  单轴力传感器SLDPRT - 副本.SLDPRT  新1.SLDPRT  新1.STEP  新2.SLDPRT  新2.STEP  装配体5.SLDASM  装配体5.SLDPRT  零件1.SLDPRT  零件2.SLDPRT
docs/rover/loadcell/step/: 1046_0B_3D.stp  3133_0.stp
src/cvtest/: CMakeLists.txt  package.xml  readme.md
src/dynamixel/: CMakeLists.txt
src/dynamixel/src/: demo0.cpp  reset.cpp
src/load-cell/: package.xml
src/load-cell/include/libphidget22-1.7.20210428/libphidget22-1.7.20210428/: ChangeLog  README  configure
src/load-cell/src/: read.cpp  read2.cpp
src/loadcell/: CMakeLists.txt  README.MD
src/loadcell/data/: 1640012990OriData.csv  1640013589ForceData.csv  1640013589OriData.csv  1640013880ForceData.csv  1640013880OriData.csv  1640014067ForceData.csv  1640014067OriData.csv  1640014255ForceData.csv  1640014255OriData.csv  1640014404ForceData.csv  1640014404OriData.csv  1640014780ForceData.csv  1640014780OriData.csv
src/loadcell/launch/: load-cell-4-input.launch  rover.launch  rover2.launch
src/loadcell/src/: loadcell-multi-pub.cpp  loadcell-pub1.cpp
src/loadcell/src/Phidget22_HelloWorld/Common/: PhidgetHelperFunctions.c  PhidgetHelperFunctions.h
src/loadcell/src/Phidget22_HelloWorld/HelloWorld_Example/: HelloWorld
src/mini_rover_rtos/: CMakeLists.txt  README.md  package.xml
src/mini_rover_rtos/config/: lift.yaml  steer.yaml  wheel.yaml
src/mini_rover_rtos/include/: lift_fsmlist.hpp  lift_motor.hpp  motor_event.hpp  multi_motor_controller.hpp  rover_event.hpp  rover_fsmlist.hpp  rover_state.hpp  steer_fsmlist.hpp  steer_motor.hpp  wheel_fsmlist.hpp  wheel_motor.hpp
src/mini_rover_rtos/launch/: lift_motor_control.launch  rover_control.launch  steer_motor_control.launch  wheel_motor_control.launch
src/mini_rover_rtos/msg/: ControlCMD.msg
src/mini_rover_rtos/src/: lift_motor.cpp  lift_motor_node.cpp  multi_motor_controller.cpp  rover_control_node.cpp  rover_state.cpp  steer_motor.cpp  steer_motor_node.cpp  wheel_motor.cpp  wheel_motor_node.cpp
src/rover-experiment/: CMakeLists.txt  package.xml
src/rover-experiment/launch/: Ground-Rotation.launch  Ground-Straight.launch  Ground-Tranverse.launch  Sensor-Calibration.launch  Slope-Rotation.launch  Slope-Straight-Down.launch  Slope-Straight-Up.launch  Slope-Tranverse.launch
src/wheel-camera/: CMakeLists.txt  README.md  package.xml
src/wheel-camera/launch/: cv_camera.launch  experiment1.launch  experiment2.launch  experiment3.launch
src/wheel-camera/src/: camera-single.cpp  demo1.cpp
(+227 files in other folders)
