<?xml version="1.0"?>
<package format="2">
  <name>mini_rover_rtos</name>
  <version>1.0.0</version>
  <description>The mini_rover_rtos package</description>
  <maintainer email="1635639396@qq.com">roma</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
